--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
     </header>
 	<div class="carrousel">
 		<div class="slides">
-  		<img src="images/etq-home-2.jpg">
-    		<p class="tekst-in-foto">Shop our Essence Series</p>
+  			<div>
+				<img class="mySlides" src="images/etq-home-3.jpg">
+				<img class="mySlides" src="images/etq-home-2.jpg" >
+			</div>
+				<p class="tekst-in-foto">Shop our Essence Series</p>
 		</div>
+
 
 
 </div>
