--- a/detail.html
+++ b/detail.html
@@ -5,12 +5,11 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/495f9f858f.js" crossorigin="anonymous"></script>
-	
+	<script src="https://kit.fontawesome.com/495f9f858f.js" crossorigin="anonymous"></script>
 	<title>ETQ Amsterdam</title>
-	
 	<link href="styles/style.css" rel="stylesheet">
 </head>
+	
 <body>
 	
     <header>
@@ -20,7 +19,7 @@
 			<button class="shop">0</button>
 		</nav>
     </header>
-	
+<main>
 	<section class="detailfoto">
 		<img src="images/detail-1.jpg">
 		<img src="images/detail-2.jpg">
@@ -66,15 +65,15 @@
 		<p>LT 01 Mineral Green by ETQ — €239</p>
 		<button class="bestelknop"><p>Select size</p></button>
 	</section>   
-    
-	</body>
+   </main>
+</body>
 <footer>
 	<ul>
 	  <li><img src="images/ideal.png" alt="ideal"></li>
 	  <li><img src="images/paypal.png" alt="paypal"></li>
 	  <li><img src="images/Apple_Pay_logo.png" alt="applepay"></li>
 	  <li><img src="images/klarna.png" alt="klarna"></li>
-</ul>
+	</ul>
 </footer>
 </html>
 <script src="scripts/script.js"></script>
